; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/rt2x00/extr_rt2x00mac.c_rt2x00mac_sta_remove.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/rt2x00/extr_rt2x00mac.c_rt2x00mac_sta_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211_hw = type { %struct.rt2x00_dev* }
%struct.rt2x00_dev = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 (%struct.rt2x00_dev*, i64)* }
%struct.ieee80211_vif = type { i32 }
%struct.ieee80211_sta = type { i32 }
%struct.rt2x00_sta = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rt2x00mac_sta_remove(%struct.ieee80211_hw* %0, %struct.ieee80211_vif* %1, %struct.ieee80211_sta* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.ieee80211_hw*, align 8
  %6 = alloca %struct.ieee80211_vif*, align 8
  %7 = alloca %struct.ieee80211_sta*, align 8
  %8 = alloca %struct.rt2x00_dev*, align 8
  %9 = alloca %struct.rt2x00_sta*, align 8
  store %struct.ieee80211_hw* %0, %struct.ieee80211_hw** %5, align 8
  store %struct.ieee80211_vif* %1, %struct.ieee80211_vif** %6, align 8
  store %struct.ieee80211_sta* %2, %struct.ieee80211_sta** %7, align 8
  %10 = load %struct.ieee80211_hw*, %struct.ieee80211_hw** %5, align 8
  %11 = getelementptr inbounds %struct.ieee80211_hw, %struct.ieee80211_hw* %10, i32 0, i32 0
  %12 = load %struct.rt2x00_dev*, %struct.rt2x00_dev** %11, align 8
  store %struct.rt2x00_dev* %12, %struct.rt2x00_dev** %8, align 8
  %13 = load %struct.ieee80211_sta*, %struct.ieee80211_sta** %7, align 8
  %14 = call %struct.rt2x00_sta* @sta_to_rt2x00_sta(%struct.ieee80211_sta* %13)
  store %struct.rt2x00_sta* %14, %struct.rt2x00_sta** %9, align 8
  %15 = load %struct.rt2x00_sta*, %struct.rt2x00_sta** %9, align 8
  %16 = getelementptr inbounds %struct.rt2x00_sta, %struct.rt2x00_sta* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = icmp slt i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %33

20:                                               ; preds = %3
  %21 = load %struct.rt2x00_dev*, %struct.rt2x00_dev** %8, align 8
  %22 = getelementptr inbounds %struct.rt2x00_dev, %struct.rt2x00_dev* %21, i32 0, i32 0
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 0
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** %24, align 8
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 0
  %27 = load i32 (%struct.rt2x00_dev*, i64)*, i32 (%struct.rt2x00_dev*, i64)** %26, align 8
  %28 = load %struct.rt2x00_dev*, %struct.rt2x00_dev** %8, align 8
  %29 = load %struct.rt2x00_sta*, %struct.rt2x00_sta** %9, align 8
  %30 = getelementptr inbounds %struct.rt2x00_sta, %struct.rt2x00_sta* %29, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  %32 = call i32 %27(%struct.rt2x00_dev* %28, i64 %31)
  store i32 %32, i32* %4, align 4
  br label %33

33:                                               ; preds = %20, %19
  %34 = load i32, i32* %4, align 4
  ret i32 %34
}

declare dso_local %struct.rt2x00_sta* @sta_to_rt2x00_sta(%struct.ieee80211_sta*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
